--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -7,3 +7,6 @@
 
 // Bootstrap
 //@import "~bootstrap-sass/assets/stylesheets/bootstrap";
+
+@import "fontawesome-pro/fontawesome";
+@import "fontawesome-pro/light";
