--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -5,6 +5,17 @@ $nav-padding-anchor: 45px;
 // color
 $orange: #FFBC42;
 $blue: #0496FF;
-$black: #011627;
-$white: #FDFFFC;
+//$black: #011627;
+//$white: #FDFFFC;
 $gray: #D6D9CE;
+$white: #FFF;
+$white-gray: #f5f6fa;
+$white-gray-2: #dcdde1;
+$black: #444;
+$blue-dark: #192a56;
+$blue-light: #0097e6;
+$yellow: #fbc531;
+$gray: #7f8fa6;
+$gray-dark: #718093;
+$green-light: #4cd137;
+$green: #44bd32;
