--- a/resources/assets/sass/pupr-perencanaan/pupr.scss
+++ b/resources/assets/sass/pupr-perencanaan/pupr.scss
@@ -1,3 +1,7 @@
 @import "navigation";
 @import "general";
+@import "section";
+@import "posts";
+@import "calendar";
+@import "icon-list";
 @import "footer";
