--- a/public/css/app.css
+++ b/public/css/app.css
@@ -6708,6 +6708,78 @@ body {
   color: #FFF;
 }
 
+.calendar .calendar-item .image-wrapper {
+  width: 100%;
+  height: 200px;
+  background-color: #444;
+  position: relative;
+}
+
+.calendar .calendar-item .image-wrapper .image {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  overflow: hidden;
+}
+
+.calendar .calendar-item .image-wrapper .image > img {
+  height: 100%;
+  -webkit-filter: blur(10px);
+          filter: blur(10px);
+}
+
+.calendar .calendar-item .image-wrapper .date-wrapper {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
+.calendar .calendar-item .image-wrapper .date-wrapper .date {
+  width: 70%;
+  height: 100%;
+  float: left;
+  display: block;
+  margin-top: -35px;
+  text-align: center;
+  font-size: 195px;
+  font-weight: 700;
+  color: #FFF;
+  font-family: 'Roboto Condensed', sans-serif;
+}
+
+.calendar .calendar-item .image-wrapper .date-wrapper .month-year {
+  width: 30%;
+  height: 100%;
+  float: left;
+  display: block;
+}
+
+.calendar .calendar-item .image-wrapper .date-wrapper .month-year .month,
+.calendar .calendar-item .image-wrapper .date-wrapper .month-year .year {
+  width: 100%;
+  height: 50%;
+  float: left;
+  display: block;
+  text-align: left;
+  font-size: 65px;
+  font-weight: bolder;
+  color: #FFF;
+  font-family: 'Roboto Condensed', sans-serif;
+  vertical-align: middle;
+}
+
+.calendar .calendar-item .image-wrapper .date-wrapper .month-year .month {
+  padding-top: 20px;
+}
+
+.calendar .calendar-item .image-wrapper .date-wrapper .month-year .year {
+  padding-bottom: 30px;
+}
+
 .icon-list .icon-list-item {
   margin: 30px 0;
 }
