--- a/resources/assets/sass/pupr-perencanaan/calendar.scss
+++ b/resources/assets/sass/pupr-perencanaan/calendar.scss
@@ -1,3 +1,87 @@
+@import "../variables";
+
 .calendar {
 
+    .calendar-item {
+
+        .image-wrapper {
+
+            width: 100%;
+            height: 200px;
+            background-color: $black;
+            position: relative;
+
+            .image {
+                position: absolute;
+                top: 0;
+                bottom: 0;
+                left: 0;
+                right: 0;
+                overflow: hidden;
+
+                & > img {
+                    height: 100%;
+                    filter: blur(10px);
+                    //height: 100%;
+                }
+            }
+
+
+            .date-wrapper {
+                //background-color: #999999;
+                position: absolute;
+                top: 0;
+                bottom: 0;
+                left: 0;
+                right: 0;
+
+                .date {
+                    width: 70%;
+                    height: 100%;
+                    float:left;
+                    display: block;
+
+                    //padding: 0 15px 5px 5px;
+                    margin-top: -35px;
+                    //letter-spacing: -1px;
+                    text-align: center;
+                    font-size: 195px;
+                    font-weight: 700;
+                    color: $white;
+                    font-family: 'Roboto Condensed', sans-serif;
+                }
+
+                .month-year {
+                    width: 30%;
+                    height: 100%;
+                    float:left;
+                    display: block;
+
+                    .month,
+                    .year {
+                        width: 100%;
+                        height: 50%;
+                        float:left;
+                        display: block;
+                        //padding: 5px;
+                        text-align: left;
+                        font-size: 65px;
+                        font-weight: bolder;
+                        color: $white;
+                        font-family: 'Roboto Condensed', sans-serif;
+                        vertical-align: middle;
+                    }
+
+                    .month {
+                        padding-top: 20px;
+                    }
+
+                    .year {
+                        padding-bottom: 30px;
+
+                    }
+                }
+            }
+        }
+    }
 }
