--- a/resources/assets/sass/pupr-perencanaan/general.scss
+++ b/resources/assets/sass/pupr-perencanaan/general.scss
@@ -5,6 +5,14 @@ body {
     background-color: $white;
 }
 
+h1, h2, h3, h4, h5, h6 {
+    font-family: 'Montserrat', sans-serif;
+}
+
+p {
+    font-family: 'Merriweather', serif;
+}
+
 .wrapper-content {
     min-height: 500px;
 }
