--- a/resources/assets/sass/pupr-perencanaan/navigation.scss
+++ b/resources/assets/sass/pupr-perencanaan/navigation.scss
@@ -29,11 +29,19 @@ nav.navbar-pu {
         .navbar-nav {
             @media (min-width: 768px) {
                 float: none;
-                margin: 0 auto;
+                //margin: 0 auto;
+                margin: 0 0 0 180px;
                 display: table;
                 table-layout: fixed;
 
             }
+        }
+
+        .navbar-header {
+
+            visibility: hidden;
+            opacity: 0;
+            transition: visibility 0s, opacity 0.5s linear;
         }
 
         .navbar-brand.small {
@@ -57,6 +65,13 @@ nav.navbar-pu {
         .logo {
             transition: all 0.5s ease;
             margin-top: -200px !important;
+        }
+
+        .navbar-header {
+
+            visibility: visible;
+            opacity: 1;
+            transition: visibility 0s, opacity 0.5s linear;
         }
 
         .navbar-nav {
