--- a/public/css/app.css
+++ b/public/css/app.css
@@ -6627,17 +6627,14 @@ nav.navbar-pu.nav-down .logo {
 @media (min-width: 768px) {
   nav.navbar-pu.nav-down .navbar-nav {
     float: none;
-    margin: 0 0 0 180px;
+    margin: 0 auto;
     display: table;
     table-layout: fixed;
   }
 }
 
 nav.navbar-pu.nav-down .navbar-header {
-  visibility: hidden;
-  opacity: 0;
-  -webkit-transition: visibility 0s, opacity 0.5s linear;
-  transition: visibility 0s, opacity 0.5s linear;
+  display: none;
 }
 
 nav.navbar-pu.nav-down .navbar-brand.small {
@@ -6647,6 +6644,8 @@ nav.navbar-pu.nav-down .navbar-brand.small {
 nav.navbar-pu.nav-down .navbar-brand.small > img {
   -webkit-transition: all 0.5s ease;
   transition: all 0.5s ease;
+  -webkit-transition-delay: 1s;
+          transition-delay: 1s;
   width: 85px;
   margin-top: -85px;
 }
@@ -6664,10 +6663,7 @@ nav.navbar-pu.nav-up .logo {
 }
 
 nav.navbar-pu.nav-up .navbar-header {
-  visibility: visible;
-  opacity: 1;
-  -webkit-transition: visibility 0s, opacity 0.5s linear;
-  transition: visibility 0s, opacity 0.5s linear;
+  display: block;
 }
 
 @media (min-width: 768px) {
@@ -6680,11 +6676,25 @@ nav.navbar-pu.nav-up .navbar-brand.small {
   padding-top: 0;
 }
 
+@media (max-width: 767px) {
+  nav.navbar-pu.nav-up .navbar-brand.small {
+    padding-left: 0;
+  }
+}
+
 nav.navbar-pu.nav-up .navbar-brand.small > img {
   -webkit-transition: all 0.5s ease;
   transition: all 0.5s ease;
-  width: 85px;
+  -webkit-transition-delay: 1s;
+          transition-delay: 1s;
   margin-top: 0;
+  width: 50px;
+}
+
+@media (min-width: 768px) {
+  nav.navbar-pu.nav-up .navbar-brand.small > img {
+    width: 85px;
+  }
 }
 
 nav.navbar-pu .pu-net {
@@ -6758,7 +6768,6 @@ nav.navbar-pu .navbar-nav > li > a {
   font-size: 15px;
   padding-top: 15px;
   padding-bottom: 15px;
-  text-transform: uppercase;
   font-weight: 700;
   letter-spacing: 1px;
   text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.1);
@@ -6804,6 +6813,11 @@ nav.navbar-pu .navbar-nav .dropdown-menu > li > a:focus {
   padding-left: 30px;
 }
 
+nav.navbar-pu .navbar-toggle .icon-bar {
+  color: #FFF;
+  background-color: #FFF;
+}
+
 .slider-container {
   padding-bottom: 0 !important;
 }
@@ -6817,7 +6831,7 @@ nav.navbar-pu .navbar-nav .dropdown-menu > li > a:focus {
 }
 
 body {
-  padding-top: 50px;
+  padding-top: 300px;
   background-color: #FFF;
 }
 
