--- a/resources/assets/sass/pupr-perencanaan/posts.scss
+++ b/resources/assets/sass/pupr-perencanaan/posts.scss
@@ -45,12 +45,21 @@
             margin-bottom: 15px;
             text-align: justify;
 
-            &:first-of-type:first-letter {
-                font-size: 100px;
-                float: left;
-                line-height: 60px;
-                padding: 25px 8px 3px 3px;
-            }
+            //&:first-of-type:first-letter {
+            //    font-size: 100px;
+            //    float: left;
+            //    line-height: 60px;
+            //    padding: 25px 8px 3px 3px;
+            //}
+        }
+
+        h2, h3 {
+            margin-top: 40px;
+        }
+
+        h4, h5, h6 {
+
+            margin-top: 35px;
         }
 
         &.header {
